amq-broker-operator/5-amq-broker-management-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
  name: amq-broker-management
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true  
  labels:
    ActiveMQArtemis: camel-queue
    application: camel-queue-app
spec:
  to:
    kind: Service
    name: camel-queue-hdls-svc
    weight: 100
  port:
    targetPort: console-jolokia
  wildcardPolicy: None
